--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "brouzie/mailer-bundle": "dev-master"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.6"
+        "phpunit/phpunit": "^5.6",
+        "zendframework/zend-mail": "^2.8"
     },
     "repositories": [
         {
