--- a/src/Mailer/composer.json
+++ b/src/Mailer/composer.json
@@ -14,10 +14,12 @@
     "require": {
         "php": ">=7.1",
         "twig/twig": "^1.34|^2.4",
-        "swiftmailer/swiftmailer": "^5.4"
+        "psr/container": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.6"
+        "phpunit/phpunit": "^5.6",
+        "swiftmailer/swiftmailer": "^5.4",
+        "zendframework/zend-mail": "^2.8"
     },
     "autoload": {
         "psr-4": {
