--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^5.6",
+        "symfony/swiftmailer-bundle": "^2.6",
         "zendframework/zend-mail": "^2.8"
     },
     "repositories": [
